# TaskManager

./: .clang-tidy  .gitignore  CMakeLists.txt  Dockerfile  Doxyfile
TaskManager/: CMakeLists.txt
TaskManager/include/Model/: id.h  task.h  task_manager.h
TaskManager/src/Model/: id.cc  task.cc  task_manager.cc
cmake/: CompileOptions.cmake  Config.cmake  Helpers.cmake  Libraries.cmake  Protobuf.cmake  Sanitizers.cmake  TaskManager.cmake  Tests.cmake
protobuf/: Label.proto  ModelService.proto  SerializableTask.proto  SolidTask.proto  Task.proto  TaskId.proto  TaskService.proto
src/: OperationResult.h  client.cc  ddos_main.cc  main.cc  server.cc
src/Model/: Task.cc  Task.h  TaskId.cc  TaskId.h  TaskIdProducer.cc  TaskIdProducer.h  TaskManager.cc  TaskManager.h
src/client/: TaskServiceModelController.cc  TaskServiceModelController.h
src/interactor/io_facility/: IIoFacility.h  Strings.cc  Strings.h
src/interactor/small_steps/: CreateFilledTaskContext.cc  CreateFilledTaskContext.h  ISmallStep.h  ISmallStepFactory.h  TaskContext.cc  TaskContext.h  TaskInitializerSmallStep.cc  TaskInitializerSmallStep.h
src/interactor/state_machine/: Context.h  StateMachine.cc  StateMachine.h  StateMachineController.cc  StateMachineController.h  StepEvent.h
src/interactor/validator/: DateFormat.h  DefaultValidator.cc  DefaultValidator.h  IValidator.h
src/logging/: DefaultLogFacility.cc  DefaultLogFacility.h
src/model/: DefaultModelController.cc  DefaultModelController.h  ITaskIdProducer.h  ModelController.cc  ModelController.h  SolidTask.h  Task.h  TaskDate.cc  TaskDate.h  TaskId.h  TaskIdProducer.h  TaskManager.cc  TaskManager.h
src/model/id/: ITaskIdProducer.h  TaskId.cc  TaskId.h  TaskIdProducer.cc  TaskIdProducer.h
src/model/server/: Server.cc  Server.h
src/model/task/: Task.cc  Task.h  TaskDate.cc  TaskDate.h
src/model/task_manager/: TaskManager.cc  TaskManager.h
src/model/task_wrapper/: TaskStorage.cc  TaskStorage.h  TaskStorage.inl  TaskWrapper.cc  TaskWrapper.h
src/persistence/: FilePersistence.cc  FilePersistence.h  Persistence.cc  Persistence.h
src/repl/: Controller.cc  Controller.h  TaskBuilder.cc  TaskBuilder.h  UIController.cc  UIController.h
src/repl/commit/: AddCommitState.cc  CommitStateEnum.h  CompleteCommitState.cc  DeleteCommitState.cc  EditCommitState.cc  ICommitState.h  NothingCommitState.cc
src/repl/context/: Context.cc  Context.h
src/repl/io_facility/: DefaultIOFacility.cc  (+8 more)
src/service/: DefaultTaskService.cc  DefaultTaskService.h
src/utils/: Functions.cc  Functions.h  TaskBuilder.cc  TaskBuilder.h  TaskIdUtils.cc  TaskIdUtils.h  TaskUtils.cc  TaskUtils.h
tests/: CMakeLists.txt  base.cc  common.h  main.cc
tests/Model/: Id.cc  Task.cc  TaskManager.cc
tests/TaskManager/Model/: CMakeLists.txt  id.cc  task.cc  task_manager.cc
tests/client/: TaskServiceModelControllerTest.cc
tests/interactor/output/: AddLabelOutput.cc  AddOutput.cc  AddOutputTest.cc  CompleteOutput.cc  ConfirmationRandomInputOutput.cc  ConfirmationRandomInputOutputTest.cc  DeleteLabelOutput.cc  DeleteOutput.cc  EditOutput.cc  InvalidFieldsOutput.cc  PlainOutput.cc  PlainOutputTest.cc  ShowAllOutput.cc  ShowAllOutputTest.cc  ShowByLabelTest.cc  ShowNOutput.cc
tests/interactor/scenarios/: AddAction.cc  AddActionTest.cc  CompleteAction.cc  ConfirmationNoShouldDoNothing.cc  DeleteActionTest.cc  EditAction.cc
tests/interactor/unit/state_machine/commands/: AddLabelCommand.cc  AddSubtaskCommand.cc  AddSubtaskCommandTest.cc  AddTaskCommand.cc  CommandTest.h  CompleteTasksCommand.cc  CompleteTasksCommandTest.cc  DeleteLabelCommand.cc  DeleteTaskCommand.cc  EditTaskCommand.cc  EditTaskCommandTest.cc  GetAllTasksCommand.cc  GetAllTasksCommandTest.cc  GetSpecifiedTasksCommand.cc  GetTasksByLabelCommand.cc  LoadTasksCommand.cc  SaveTasksCommand.cc  VoidCommand.cc
tests/interactor/unit/state_machine/interactor_steps/: AddLabelStep.cc  AddLabelStepTest.cc  AddStep.cc  AddStepTest.cc  CompleteStep.cc  CompleteStepTest.cc  DeleteLabelStep.cc  DeleteStep.cc  DeleteStepTest.cc  EditStep.cc  EditStepTest.cc  FinalizeStepTest.cc  HelpStep.cc  HelpStepTest.cc  LoadStep.cc  LoadStepTest.cc  PromptStep.cc  PromptStepTest.cc  SaveStep.cc  SaveStepTest.cc  ShowStep.cc  ShowStepTest.cc  StepTest.h  UnknownStep.cc  UnknownStepTest.cc
tests/interactor/unit/validator/: DefaultValidator.cc  DefaultValidatorTest.cc
tests/model/: Id.cc  ModelUtils.h  Task.cc  TaskManager.cc  TaskStorage.cc  TaskWrapper.cc
tests/model/id/: Id.cc  IdTest.cc
tests/model/model_controller/: DefaultModelController.cc  DefaultModelControllerDDOSTest.cc  DefaultModelControllerTest.cc  ModelController.cc
tests/model/task/: Task.cc  TaskTest.cc
tests/model/task_manager/: TaskManager.cc  TaskManagerTest.cc
tests/persistence/: FilePersistenceTest.cc  MakeItWork.cc  Persistence.cc
tests/repl/: common.h
tests/repl/output/: AddOutput.cc  CompleteOutput.cc  ConfirmationRandomInputOutput.cc  DeleteOutput.cc  EditOutput.cc  InvalidFieldsOutput.cc  PlainOutput.cc  ShowAllOutput.cc  ShowNOutput.cc  UsageFramework.h
tests/repl/scenarios/: AddAction.cc  CompleteAction.cc  ConfirmationNoShouldDoNothing.cc  DeleteAction.cc  EditAction.cc  Framework.h  ScenarioFramework.h  SimpleScenario.cc
tests/repl/unit/state_machine/commands/: AddSubtaskCommand.cc  AddTaskCommand.cc  CommandTest.h  CompleteTasksCommand.cc  DeleteTaskCommand.cc  EditTaskCommand.cc  GetAllTasksCommand.cc  GetSpecifiedTasksCommand.cc  LoadTasksCommand.cc  SaveTasksCommand.cc  VoidCommand.cc
tests/repl/unit/state_machine/repl_steps/: AddReplStep.cc  AddReplStepTest.cc  CompleteReplStep.cc  DeleteReplStep.cc  EditReplStep.cc  HelpReplStep.cc  LoadRelpStep.cc  PromptReplStep.cc  ReplStepTest.h  SaveReplStep.cc  ShowReplStep.cc  UnknownReplStep.cc
tests/repl/unit/validator/: DefaultValidator.cc
tests/repl/validator/: DefaultValidator.cc
tests/service/: DefaultTaskServiceTest.cc
tests/test_utils/: MockIoFacility.h  MockPersistence.h  MockTaskIdProducer.h  ScenarioFramework.h  TaskFactory.h  TaskStringedData.h  common.h  operators.h  utils.h
(+264 files in other folders)
